<resources>
    <string name="sign_up_toast_error">پر کردن همه‌ی موارد بالا الزامی است</string>
    <string name="app_name">BookShare</string>
    <string name="entrance_tab_1">ورود</string>
    <string name="entrance_tab_2">ثبت‌نام</string>
    <string name="sign_in_forgot_password">بازیابی رمز عبور</string>
    <string name="sign_in_username">نامِ کاربری</string>
    <string name="sign_in_password">رمز عبور</string>
    <string name="sign_in_password_repeat">تکرار رمز عبور</string>
    <string name="sign_up_first_name">نام</string>
    <string name="sign_up_last_name">نامِ خانوادگی</string>
    <string name="sign_up_last_email">رایانامه</string>
    <string name="info_dialog_info">مشخصات فردی</string>
    <string name="info_dialog_books">کتب شما</string>
    <string name="info_dialog_lent">کتب قرض گرفته شده</string>
    <string name="info_dialog_borrowed">کتب قرض داده شده</string>
    <string name="retrieval_title">رایانامه‌ی خود را وارد کنید</string>
    <string name="retrieval_send">بازنشانی رمز عبور</string>
    <string name="retrieval_subtitle">رمز عبور جدید، به ایمیل بالا ارسال شد.</string>
    <string name="retrieval_time">5:59</string>
    <string name="retrieval_submit">راستی‌آزمایی</string>
    <string name="retrieval_code_hint">کد</string>
    <string name="sign_up_username_const">حداقل 8 حرف و حداکثر 30 حرف</string>
    <string name="sign_up_username_error1">نام کاربری باید حداقل 8 حرف و حداکثر 30 حرف باشد</string>
    <string name="sign_up_username_error2">داشتن نام کاربری الزامی است</string>
    <string name="sign_up_first_const">حداکثر 30 حرف</string>
    <string name="sign_up_first_error">نام باید حداکثر 30 حرف باشد</string>
    <string name="sign_up_last_const">حداکثر 40 حرف</string>
    <string name="sign_up_password_error1">داشتن رمز عبور الزامی است</string>
    <string name="sign_up_password_error2">تکرار رمز اشتباه است</string>
    <string name="sign_up_last_error">نام خانوادگی باید حداکثر 40 حرف باشد</string>
    <string name="sign_up_email_const">حداکثر 254 حرف</string>
    <string name="sign_up_email_error1">رایانامه باید حداکثر 254 حرف باشد</string>
    <string name="sign_up_email_error2">ثبت رایانامه الزامی است</string>
    <string name="retrieve_email_error">رایانامه باید حداکثر 254 حرف باشد</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="confirm">تایید</string>
    <string name="reject">انصراف</string>
    <string name="name_change_title1">نام کاربری جدید را وارد کنید</string>
    <string name="name_change_title2">نام جدید را وارد کنید</string>
    <string name="name_change_title3">نام خانوادگی جدید را وارد کنید</string>
    <string name="password_change_title">موارد زیر را پُر کنید</string>
    <string name="password_change_hint1">رمز عبور قدیمی</string>
    <string name="password_change_hint2">رمز عبور جدید</string>
    <string name="password_change_hint3">تکرار رمز عبور جدید</string>
    <string name="password_change_error">وارد کردن رمز قبلی الزامی است</string>

</resources>
