<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_in_background"
    tools:context=".RetrievalActivity">
    <LinearLayout
        android:layout_width="@dimen/sign_in_card_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sign_inner_margin"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_card_height"
            android:layout_margin="@dimen/sign_inner_margin"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_weight="1"
                android:fontFamily="@font/dosis"
                android:layout_gravity="center"
                android:textColor="@color/sign_forgot_text"
                android:textSize="@dimen/sign_card_text_size"
                android:text="@string/retrieval_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_text_height"
                android:layout_margin="@dimen/sign_up_text_margins"
                android:textColorHint="@color/silver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/sign_textField_border"
                app:boxCornerRadiusTopStart="@dimen/sign_text_border_radius"
                app:boxCornerRadiusBottomEnd="@dimen/sign_text_border_radius"
                app:boxCornerRadiusBottomStart="@dimen/sign_text_border_radius"
                app:boxCornerRadiusTopEnd="@dimen/sign_text_border_radius"
                app:hintTextColor="@color/sign_hints"
                app:counterTextColor="@color/colorYellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/retrieval_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/dosis"
                    android:padding="@dimen/sign_up_text_padding"
                    android:hint="@string/sign_up_last_email"
                    android:textColorHint="@color/sign_hints"
                    android:textColor="@color/sign_texts"
                    android:textSize="@dimen/sign_card_text_size"
                    android:inputType="textEmailAddress"
                    android:gravity="right|center_vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_card_height"
                android:layout_margin="@dimen/sign_inner_margin"
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/retrieval_code_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:layout_weight="1"
                    android:fontFamily="@font/dosis"
                    android:layout_gravity="center"
                    android:textColor="@color/sign_forgot_text"
                    android:textSize="@dimen/sign_card_text_size"
                    android:text="@string/retrieval_subtitle"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/retrieval_email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/sign_up_text_height"
                    android:layout_marginRight="@dimen/sign_inner_margin"
                    android:fontFamily="@font/dosis"
                    android:layout_gravity="center"
                    android:textColor="@color/sign_in_sign_button"
                    android:textSize="@dimen/sign_card_text_size"
                    android:text="@string/retrieval_send"
                    android:background="@color/sign_in_sign_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:backgroundTint="@color/transparent"
                    app:strokeColor="@color/sign_in_sign_button"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_text_height"
                android:layout_margin="@dimen/sign_up_text_margins"
                android:textColorHint="@color/silver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/sign_textField_border"
                app:boxCornerRadiusTopStart="@dimen/sign_text_border_radius"
                app:boxCornerRadiusBottomEnd="@dimen/sign_text_border_radius"
                app:boxCornerRadiusBottomStart="@dimen/sign_text_border_radius"
                app:boxCornerRadiusTopEnd="@dimen/sign_text_border_radius"
                app:hintTextColor="@color/sign_hints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/retrieval_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/dosis"
                    android:padding="@dimen/sign_up_text_padding"
                    android:hint="@string/retrieval_code_hint"
                    android:textColorHint="@color/sign_hints"
                    android:textColor="@color/sign_texts"
                    android:textSize="@dimen/sign_card_text_size"
                    android:inputType="textEmailAddress"
                    android:gravity="right|center_vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_card_height"
                android:layout_margin="@dimen/sign_inner_margin"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/retrieval_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:layout_weight="1"
                    android:fontFamily="@font/dosis"
                    android:layout_gravity="center"
                    android:textColor="@color/sign_forgot_text"
                    android:textSize="@dimen/sign_card_text_size"
                    android:text="@string/retrieval_time"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/retrieval_code_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/sign_up_text_height"
                    android:layout_marginRight="@dimen/sign_inner_margin"
                    android:fontFamily="@font/dosis"
                    android:layout_gravity="center"
                    android:textColor="@color/sign_in_sign_button"
                    android:textSize="@dimen/sign_card_text_size"
                    android:text="@string/retrieval_submit"
                    android:background="@color/sign_in_sign_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:backgroundTint="@color/transparent"
                    app:strokeColor="@color/sign_in_sign_button"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>