<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_in_background">

    <LinearLayout
        android:layout_width="@dimen/sign_in_card_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sign_inner_margin"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_up_text_margins"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="@color/silver"
            app:hintTextColor="@color/sign_hints"
            app:boxStrokeColor="@color/sign_textField_border"
            app:boxCornerRadiusTopStart="@dimen/sign_text_border_radius"
            app:boxCornerRadiusBottomEnd="@dimen/sign_text_border_radius"
            app:boxCornerRadiusBottomStart="@dimen/sign_text_border_radius"
            app:boxCornerRadiusTopEnd="@dimen/sign_text_border_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_text_height"
                android:fontFamily="@font/dosis"
                android:padding="@dimen/sign_up_text_padding"
                android:hint="@string/sign_in_username"
                android:textColorHint="@color/sign_hints"
                android:textColor="@color/sign_texts"
                android:textSize="@dimen/sign_card_text_size"
                android:inputType="text"
                android:gravity="right|center_vertical"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_up_text_margins"
            android:textColorHint="@color/silver"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextColor="@color/sign_hints"
            app:boxStrokeColor="@color/sign_textField_border"
            app:boxCornerRadiusTopStart="@dimen/sign_text_border_radius"
            app:boxCornerRadiusBottomEnd="@dimen/sign_text_border_radius"
            app:boxCornerRadiusBottomStart="@dimen/sign_text_border_radius"
            app:boxCornerRadiusTopEnd="@dimen/sign_text_border_radius"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_text_height"
                android:fontFamily="@font/dosis"
                android:padding="@dimen/sign_up_text_padding"
                android:hint="@string/sign_in_password"
                android:textColorHint="@color/sign_hints"
                android:textColor="@color/sign_texts"
                android:textSize="@dimen/sign_card_text_size"
                android:inputType="numberPassword"
                android:gravity="right|center_vertical"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_up_text_height"
            android:layout_margin="@dimen/sign_inner_margin"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/sign_in_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_weight="1"
                android:fontFamily="@font/dosis"
                android:layout_gravity="center"
                android:textColor="@color/sign_forgot_text"
                android:textSize="@dimen/sign_card_text_size"
                android:text="@string/sign_in_forgot_password"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_sign_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/dosis"
                android:layout_gravity="center"
                android:textColor="@color/sign_in_sign_button"
                android:textSize="@dimen/sign_card_text_size"
                android:text="@string/entrance_tab_1"
                android:background="@color/transparent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:backgroundTint="@color/transparent"
                app:strokeColor="@color/sign_in_sign_button"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>