<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/info_dialog_body_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_dialog_header_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/info_dialog_header_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <FrameLayout
            android:id="@+id/info_dialog_header_frameLayout"
            android:layout_width="@dimen/info_dialog_avatar_side"
            android:layout_height="@dimen/info_dialog_avatar_side"
            android:layout_margin="@dimen/info_dialog_large_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <ImageView
                android:id="@+id/info_dialog_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sign_up_avatar"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sign_up_circle"/>
        </FrameLayout>
        <TextView
            android:id="@+id/info_dialog_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis"
            android:textSize="@dimen/info_dialog_header_text_size"
            android:text="@string/sign_in_username"
            android:textColor="@color/info_dialog_header_text"
            android:layout_marginTop="@dimen/info_dialog_small_margin"
            android:layout_marginBottom="@dimen/info_dialog_large_margin"
            android:layout_marginRight="@dimen/info_dialog_large_margin"
            app:layout_constraintTop_toBottomOf="@id/info_dialog_header_frameLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_dialog_body_height"
        app:layout_constraintTop_toBottomOf="@id/info_dialog_header_constraintLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_margin="@dimen/info_dialog_large_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/info_dialog_body_title"
                    android:textSize="@dimen/info_dialog_body_title_size"
                    android:fontFamily="@font/dosis"
                    android:text="@string/info_dialog_info"
                    android:layout_marginBottom="@dimen/info_dialog_small_margin"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/info_dialog_medium_margin"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layoutDirection="rtl"
                    android:layout_marginBottom="@dimen/info_dialog_medium_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/info_dialog_body_subtitle"
                        android:fontFamily="@font/dosis"
                        android:textSize="@dimen/info_dialog_body_subtitle_size"
                        android:text="@string/sign_up_first_name"
                        android:layout_marginLeft="@dimen/info_dialog_large_margin"/>
                    <TextView
                        android:id="@+id/info_dialog_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/info_dialog_body_text"
                        android:fontFamily="@font/dosis"
                        android:textSize="@dimen/info_dialog_body_text_size"
                        android:text="عارف صادقیان"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layoutDirection="rtl"
                    android:layout_marginBottom="@dimen/info_dialog_medium_margin">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/info_dialog_body_subtitle"
                        android:fontFamily="@font/dosis"
                        android:textSize="@dimen/info_dialog_body_subtitle_size"
                        android:text="@string/sign_up_last_email"
                        android:layout_marginLeft="@dimen/info_dialog_large_margin"/>
                    <TextView
                        android:id="@+id/info_dialog_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/info_dialog_body_text"
                        android:fontFamily="@font/dosis"
                        android:textSize="@dimen/info_dialog_body_text_size"
                        android:text="someone@example.com"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/info_dialog_large_margin"
                android:layout_marginRight="@dimen/info_dialog_large_margin"
                android:layout_marginBottom="@dimen/info_dialog_large_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/info_dialog_body_title"
                    android:fontFamily="@font/dosis"
                    android:textSize="@dimen/info_dialog_body_title_size"
                    android:text="@string/info_dialog_books"
                    android:layout_marginBottom="@dimen/info_dialog_small_margin"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/info_dialog_medium_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/info_dialog_large_margin"
                android:layout_marginRight="@dimen/info_dialog_large_margin"
                android:layout_marginBottom="@dimen/info_dialog_large_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/info_dialog_body_title"
                    android:fontFamily="@font/dosis"
                    android:textSize="@dimen/info_dialog_body_title_size"
                    android:text="@string/info_dialog_lent"
                    android:layout_marginBottom="@dimen/info_dialog_small_margin"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/info_dialog_medium_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/info_dialog_large_margin"
                android:layout_marginRight="@dimen/info_dialog_large_margin"
                android:layout_marginBottom="@dimen/info_dialog_large_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/info_dialog_body_title"
                    android:textSize="@dimen/info_dialog_body_title_size"
                    android:fontFamily="@font/dosis"
                    android:text="@string/info_dialog_borrowed"
                    android:layout_marginBottom="@dimen/info_dialog_small_margin"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/info_dialog_medium_margin"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/info_dialog_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/info_dialog_edit"
        app:layout_constraintTop_toBottomOf="@id/info_dialog_header_constraintLayout"
        app:layout_constraintBottom_toBottomOf="@id/info_dialog_header_constraintLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.1"/>
</androidx.constraintlayout.widget.ConstraintLayout>