<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">
    <LinearLayout
        android:layout_width="@dimen/sign_in_card_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/sign_outer_margin"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_card_height"
                android:layout_margin="@dimen/sign_inner_margin"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/name_change_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:layout_weight="1"
                    android:fontFamily="@font/dosis"
                    android:layout_gravity="center"
                    android:textColor="@color/sign_subtexts"
                    android:textSize="@dimen/sign_card_text_size"
                    android:text="@string/name_change_title1"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_text_height"
                android:layout_margin="@dimen/sign_up_text_margins"
                android:textColorHint="@color/silver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/dialog_forground"
                app:boxCornerRadiusTopStart="@dimen/sign_text_border_radius"
                app:boxCornerRadiusBottomEnd="@dimen/sign_text_border_radius"
                app:boxCornerRadiusBottomStart="@dimen/sign_text_border_radius"
                app:boxCornerRadiusTopEnd="@dimen/sign_text_border_radius"
                app:hintTextColor="@color/dialog_forground"
                app:errorTextColor="@color/colorOrange"
                app:errorTextAppearance="@style/SignSubtext">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_change_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/dosis"
                    android:padding="@dimen/sign_up_text_padding"
                    android:hint="@string/sign_in_username"
                    android:textColorHint="@color/sign_hints"
                    android:textColor="@color/sign_texts"
                    android:textSize="@dimen/sign_card_text_size"
                    android:inputType="textEmailAddress"
                    android:gravity="right|center_vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_card_height"
                android:layout_margin="@dimen/sign_inner_margin"
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_weight="1">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/name_change_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/sign_up_text_height"
                    android:layout_marginRight="@dimen/sign_inner_margin"
                    android:fontFamily="@font/dosis"
                    android:layout_gravity="center"
                    android:textColor="@color/sign_subtexts"
                    android:textSize="@dimen/sign_card_text_size"
                    android:text="@string/confirm"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:backgroundTint="@color/transparent"
                    app:strokeColor="@color/dialog_forground"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>

